--- a/android/build.gradle
+++ b/android/build.gradle
@@ -20,6 +20,9 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:3.4.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "com.google.gms:google-services:4.3.3"
+        classpath "com.google.firebase:firebase-crashlytics-gradle:2.2.0"
+        classpath "com.google.firebase:perf-plugin:1.3.1"
         apply from: file("./mendixnative-release/mendix.gradle"); applyMendixClassPaths(project)
 
         // NOTE: Do not place your application dependencies here; they belong
