--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@react-native-community/geolocation": "2.0.2",
     "@react-native-community/masked-view": "0.1.7",
     "@react-native-community/netinfo": "5.6.2",
+    "@react-native-firebase/app": "^10.3.0",
+    "@react-native-firebase/crashlytics": "^10.3.1",
+    "@react-native-firebase/perf": "^10.3.1",
     "jsc-android": "245459.0.0",
     "react": "~16.9.0",
     "react-native": "0.61.5",
@@ -23,7 +26,6 @@
     "react-native-dark-mode": "0.2.2",
     "react-native-device-info": "5.5.3",
     "react-native-fast-image": "8.1.5",
-    "react-native-firebase": "5.6.0",
     "react-native-geocoder": "0.5.0",
     "react-native-gesture-handler": "1.6.0",
     "react-native-image-picker": "2.3.4",
