Fix local notifications

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -109,6 +109,7 @@ project.ext.vectoricons = [
 ]
 
 dependencies {
+    implementation project(':react-native-push-notification')
     implementation project(':@react-native-firebase_messaging')
     implementation "me.leolin:ShortcutBadger:1.1.22@aar"
     implementation project(':@react-native-firebase_perf')
