--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-inappbrowser-reborn": "3.3.4",
     "react-native-localize": "1.3.4",
     "react-native-maps": "0.27.0",
+    "react-native-push-notification": "^7.2.2",
     "react-native-reanimated": "1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-sound": "0.11.0",
