--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/geolocation": "2.0.2",
     "@react-native-community/masked-view": "0.1.7",
     "@react-native-community/netinfo": "5.6.2",
+    "@react-native-community/push-notification-ios": "^1.8.0",
     "@react-native-firebase/analytics": "^11.0.0",
     "@react-native-firebase/app": "^11.0.0",
     "@react-native-firebase/crashlytics": "^11.0.0",
