Disable perf tracing

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,12 +69,12 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            FirebasePerformance {
+                instrumentationEnabled false
+            }
         }
         debug {
             FirebasePerformance {
-                // Set this flag to 'false' to disable @AddTrace annotation processing and
-                // automatic HTTP/S network request monitoring
-                // for a specific build variant at compile time.
                 instrumentationEnabled false
             }
         }
